# stock-minute-ai

./: .env  .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  check.py  fix_source.py  main.py  pyproject.toml  start_ui.bat  启动监控台.bat
.claude/: launch.json
app/: exploration.py  ui.py
docs/: quantdinger-style-architecture.md
ingest/: alpaca_stream.py  history.py  streamlit_app.py
notebooks/: research.py
scripts/: check.py
tests/: conftest.py  test_architecture_scaffold.py  test_engine_golden.py  test_m0_contracts.py
trader/: __init__.py  allocator.py  approval.py  audit.py  config.py  contracts.py  data_cache.py  data_feed.py  data_feed_yfinance.py  engine.py  exploration.py  main.py  market_calendar.py  models.py  monitor_data.py  monitor_nice.py  news.py  notify.py  order_manager.py  plan.py  portfolio.py  portfolio_manager.py  position_monitor.py  review.py  risk_engine.py  runtime.py  scheduler.py  selection.py  strategy_core.py  ui_prefs.py  universe.py  watchdog.py
trader/ai/: __init__.py  client.py  manager.py  web_research.py
trader/ai/agents/: __init__.py  base.py  bull_bear.py  news.py  orchestrator.py  technical.py  web_research.py
trader/broker/: __init__.py  alpaca.py  base.py  paper.py
trader/strategies/: __init__.py  base.py  registry.py
